--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Candy Banners</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>HTML</h1>
-    <h1>CSS</h1>
+    <main>
+      <div class="barcelet"></div>
+      <div class="container">
+        <span
+          class="particle halfCircleAqua"
+          style="left: 60%; top: 30%"
+        ></span>
+        <span
+          class="particle halfCircleBlue"
+          style="left: 10%; top: 80%"
+        ></span>
+        <span class="particle circlePurple" style="left: 70%; top: 70%"></span>
+        <span class="particle circleAqua" style="left: 70%; top: 40%"></span>
+        <span class="particle rectangleAqua" style="left: 20%; top: 35%"></span>
+        <span class="particle rectangleDark" style="left: 34%; top: 73%"></span>
+        <span class="particle circlePurple" style="left: 25%; top: 62%"></span>
+        <span class="particle circleAqua" style="left: 21%; top: 70%"></span>
+        <span class="particle rectangleAqua" style="left: 20%; top: 35%"></span>
+        <span class="particle rectangleDark" style="left: 10%; top: 47%"></span>
+        <h2 class="headerText">Learn more about lupus nephritis with</h2>
+        <div class="titleContainer">
+          <p>A FREE</p>
+          <p>AWARENESS</p>
+          <p>KIT</p>
+        </div>
+      </div>
+    </main>
+    <script src="./script.js"></script>
   </body>
 </html>
