added banner 1 and 2

--- a/index.html
+++ b/index.html
@@ -4,33 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Candy Banners</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="banner1.css" />
+    <link rel="stylesheet" href="banner2.css" />
   </head>
   <body>
     <main>
-      <div class="barcelet"></div>
+      <!-- <div class="barcelet"></div> -->
       <div class="container">
-        <span
-          class="particle halfCircleAqua"
-          style="left: 60%; top: 30%"
-        ></span>
-        <span
-          class="particle halfCircleBlue"
-          style="left: 10%; top: 80%"
-        ></span>
-        <span class="particle circlePurple" style="left: 70%; top: 70%"></span>
-        <span class="particle circleAqua" style="left: 70%; top: 40%"></span>
-        <span class="particle rectangleAqua" style="left: 20%; top: 35%"></span>
-        <span class="particle rectangleDark" style="left: 34%; top: 73%"></span>
-        <span class="particle circlePurple" style="left: 25%; top: 62%"></span>
-        <span class="particle circleAqua" style="left: 21%; top: 70%"></span>
-        <span class="particle rectangleAqua" style="left: 20%; top: 35%"></span>
-        <span class="particle rectangleDark" style="left: 10%; top: 47%"></span>
-        <h2 class="headerText">Learn more about lupus nephritis with</h2>
-        <div class="titleContainer">
-          <p>A FREE</p>
-          <p>AWARENESS</p>
-          <p>KIT</p>
+        <div class="banner">
+          <h2 class="headerText">It includes</h2>
+          <h3 class="subHeaderText">
+            Information about living with managing LN
+          </h3>
+          <div class="usb">
+            <div class="textContainer">
+              <span class="arrow"></span>
+              <span>
+                <p class="usbText one">AL</p>
+                <p class="usbText two">I</p>
+                <p class="subText">Lorem ipsum dolor sit, amet conse</p>
+              </span>
+            </div>
+          </div>
+          <div class="checkContainer">
+            <span class="check"></span><span class="check"></span
+            ><span class="check"></span><span class="check"></span>
+          </div>
         </div>
       </div>
     </main>
