--- a/index.html
+++ b/index.html
@@ -11,26 +11,7 @@
     <main>
       <!-- <div class="barcelet"></div> -->
       <div class="container">
-        <div class="banner">
-          <h2 class="headerText">It includes</h2>
-          <h3 class="subHeaderText">
-            Information about living with managing LN
-          </h3>
-          <div class="usb">
-            <div class="textContainer">
-              <span class="arrow"></span>
-              <span>
-                <p class="usbText one">AL</p>
-                <p class="usbText two">I</p>
-                <p class="subText">Lorem ipsum dolor sit, amet conse</p>
-              </span>
-            </div>
-          </div>
-          <div class="checkContainer">
-            <span class="check"></span><span class="check"></span
-            ><span class="check"></span><span class="check"></span>
-          </div>
-        </div>
+        <div class="banner"></div>
       </div>
     </main>
     <script src="./script.js"></script>
