--- a/index.html
+++ b/index.html
@@ -4,16 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Candy Banners</title>
-    <link rel="stylesheet" href="banner1.css" />
-    <link rel="stylesheet" href="banner2.css" />
+    <link rel="stylesheet" href="./styles/banner1.css" />
+    <link rel="stylesheet" href="./styles/banner2.css" />
+    <link rel="stylesheet" href="./styles/banner3.css" />
+    <link rel="stylesheet" href="./styles/banner4.css" />
   </head>
   <body>
     <main>
       <!-- <div class="barcelet"></div> -->
       <div class="container">
-        <div class="banner"></div>
+        <div class="banner No4">
+          <h2 class="bannerHeading">Go ALL IN with us</h2>
+          <div class="bannerContainer">
+            <!-- <div class="usb bannerCard No4">
+<div class="textContainer">
+  <span class="arrow"></span>
+  <span>
+    <p class="usbText one">AL</p>
+    <p class="usbText two">I</p>
+    <p class="subText">Lorem ipsum dolor sit, amet conse</p>
+  </span>
+</div>
+</div> -->
+            <div class="usb bannerCard secondPage open">
+              <div class="innerPage">
+                <div class="usbParagraph">
+                  <div class="usb">
+                    <div class="textContainer">
+                      <span class="arrow"></span>
+                      <span>
+                        <p class="usbText one">AL</p>
+                        <p class="usbText two">I</p>
+                        <p class="subText">Lorem ipsum dolor sit, amet conse</p>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="text">
+                    <div class="textBar"></div>
+                    <div class="textBar"></div>
+                    <div class="textBar"></div>
+                    <div class="textBar"></div>
+                  </div>
+                </div>
+                <div class="braceletParagraph">
+                  <div class="text">
+                    <div class="textBar"></div>
+                    <div class="textBar"></div>
+                    <div class="textBar"></div>
+                    <div class="textBar"></div>
+                  </div>
+                  <div class="braceletContainer">
+                    <div class="bracelet1"></div>
+                    <div class="bracelet2"></div>
+                 </div>
+                </div>
+        </div>
+            </div>
+          </div>
+          <button class="registerButton">Register for your kit</button>
+        </div>
       </div>
     </main>
-    <script src="./script.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
