last banner finished

--- a/index.html
+++ b/index.html
@@ -13,55 +13,15 @@
     <main>
       <!-- <div class="barcelet"></div> -->
       <div class="container">
-        <div class="banner No4">
-          <h2 class="bannerHeading">Go ALL IN with us</h2>
-          <div class="bannerContainer">
-            <!-- <div class="usb bannerCard No4">
-<div class="textContainer">
-  <span class="arrow"></span>
-  <span>
-    <p class="usbText one">AL</p>
-    <p class="usbText two">I</p>
-    <p class="subText">Lorem ipsum dolor sit, amet conse</p>
-  </span>
-</div>
-</div> -->
-            <div class="usb bannerCard secondPage open">
-              <div class="innerPage">
-                <div class="usbParagraph">
-                  <div class="usb">
-                    <div class="textContainer">
-                      <span class="arrow"></span>
-                      <span>
-                        <p class="usbText one">AL</p>
-                        <p class="usbText two">I</p>
-                        <p class="subText">Lorem ipsum dolor sit, amet conse</p>
-                      </span>
-                    </div>
-                  </div>
-                  <div class="text">
-                    <div class="textBar"></div>
-                    <div class="textBar"></div>
-                    <div class="textBar"></div>
-                    <div class="textBar"></div>
-                  </div>
-                </div>
-                <div class="braceletParagraph">
-                  <div class="text">
-                    <div class="textBar"></div>
-                    <div class="textBar"></div>
-                    <div class="textBar"></div>
-                    <div class="textBar"></div>
-                  </div>
-                  <div class="braceletContainer">
-                    <div class="bracelet1"></div>
-                    <div class="bracelet2"></div>
-                 </div>
-                </div>
-        </div>
-            </div>
+        <div class="banner No0">
+          <div class="bannerTitle">
+            <p class="title">
+              Get a <span style="color: rgb(74, 39, 109)">FREE</span><br />
+              ALL IN lupus nephritis<br />
+              awarentess kit
+            </p>
           </div>
-          <button class="registerButton">Register for your kit</button>
+          <button class="registerButton">Register</button>
         </div>
       </div>
     </main>
