--- a/index.html
+++ b/index.html
@@ -4,35 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Candy Banners</title>
-    <link rel="stylesheet" href="banner1.css" />
-    <link rel="stylesheet" href="banner2.css" />
+    <link rel="stylesheet" href="./styles/banner1.css" />
+    <link rel="stylesheet" href="./styles/banner2.css" />
+    <link rel="stylesheet" href="./styles/banner3.css" />
+    <link rel="stylesheet" href="./styles/banner4.css" />
   </head>
   <body>
     <main>
-      <!-- <div class="barcelet"></div> -->
       <div class="container">
-        <div class="banner">
-          <h2 class="headerText">It includes</h2>
-          <h3 class="subHeaderText">
-            Information about living with managing LN
-          </h3>
-          <div class="usb">
-            <div class="textContainer">
-              <span class="arrow"></span>
-              <span>
-                <p class="usbText one">AL</p>
-                <p class="usbText two">I</p>
-                <p class="subText">Lorem ipsum dolor sit, amet conse</p>
-              </span>
-            </div>
-          </div>
-          <div class="checkContainer">
-            <span class="check"></span><span class="check"></span
-            ><span class="check"></span><span class="check"></span>
-          </div>
+        <div class="banner No0">
+          <p class="title">
+            Get a
+            <span>FREE</span><br />
+            ALL IN lupus nephritis<br />
+            awareness kit
+          </p>
+          <button class="registerButton">Register</button>
         </div>
       </div>
     </main>
-    <script src="./script.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
